force-app/main/default/objects/Gift_Aid_Declaration__c/fields/DMS_Declartion_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Declartion_ID__c</fullName>
    <externalId>true</externalId>
    <label>DMS Declartation ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>