force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Aid Declarations</relationshipLabel>
    <relationshipName>Gift_Aid_Declarations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>