force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration__c</fullName>
    <defaultValue>&apos;If you are a UK tax payer and tick Yes to Gift Aid the government will give us 25% on top of your donation. It doesnt cost you a penny, and helps to keep us going&apos;</defaultValue>
    <inlineHelpText>If you are a UK tax payer and tick &apos;Yes&apos; to Gift Aid the government will give us 25% on top of your donation. It doesn&apos;t cost you a penny, and helps to keep us going</inlineHelpText>
    <label>Gift Aid Declaration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>