force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Gift_Aid_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_End_Date__c</fullName>
    <label>Gift Aid End Date</label>
    <type>Date</type>
</CustomField>