force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Gift_Aid_Source__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Source__c</fullName>
    <label>Gift Aid Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Donor Portal</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>