force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Gift_Aid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Gift Aid Start Date</label>
    <type>Date</type>
</CustomField>