force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Gift_Aid_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Status__c</fullName>
    <label>Gift Aid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GDPR</valueSetName>
    </valueSet>
</CustomField>